# lecturescribe

./: .gitignore  LICENSE  README-PORTABLE.txt  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  run.ps1  setup.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
archive/python-legacy/: .env.example  README.md  bulk_transcriber.py
lecturescribe-tauri/: index.html  index.production.html  package-lock.json  package.json  run-dev.ps1  tsconfig.json  vite.config.ts
lecturescribe-tauri/src/: App.tsx  main.ts  main.tsx  styles.css  vendor.d.ts
lecturescribe-tauri/src-tauri/: Cargo.toml  tauri.conf.json
lecturescribe-tauri/src-tauri/crates/lecturescribe-adapters/: Cargo.toml
lecturescribe-tauri/src-tauri/crates/lecturescribe-adapters/src/: credentials.rs  diagnostics.rs  downloader.rs  gemini.rs  lib.rs  media.rs  models.rs  paths.rs  process.rs  sources.rs  tools.rs  transcript.rs
lecturescribe-tauri/src-tauri/crates/lecturescribe-adapters/src/pipeline/: media_stages.rs  mod.rs  output_stages.rs  transcription_stages.rs
lecturescribe-tauri/src-tauri/crates/lecturescribe-core/: Cargo.toml
lecturescribe-tauri/src-tauri/crates/lecturescribe-core/src/: lib.rs  planner.rs  source.rs
lecturescribe-tauri/src-tauri/crates/lecturescribe-core/src/model/: execution.rs  feedback.rs  inputs.rs  mod.rs  settings.rs  transcript.rs
lecturescribe-tauri/src-tauri/crates/lecturescribe-engine/: Cargo.toml
lecturescribe-tauri/src-tauri/crates/lecturescribe-engine/src/: db.rs  lib.rs  runner.rs  runtime.rs  schema.rs  snapshot.rs  store.rs
lecturescribe-tauri/src-tauri/src/: app_state.rs  main.rs  migration.rs
lecturescribe-tauri/src-tauri/src/commands/: files.rs  jobs.rs  mod.rs  setup.rs
lecturescribe-tauri/src/components/: ActivityBar.tsx  Header.tsx  Icon.tsx  QueueWorkspace.tsx  SourcePanel.tsx  ui.tsx
lecturescribe-tauri/src/components/dialogs/: PasteLinksModal.tsx  PreflightModal.tsx  ProductDialogs.tsx  SettingsModal.tsx  SetupCenter.tsx  SetupWizard.tsx
lecturescribe-tauri/src/components/settings/: LanguagePickerDialog.tsx  ModelChoice.tsx  OutputControls.tsx  SettingsRow.tsx  language-data.ts  language-helpers.ts  model-helpers.ts  output-helpers.ts
lecturescribe-tauri/src/hooks/: useAppController.ts  useVirtualRows.ts
lecturescribe-tauri/src/lib/: backend.ts  preview.ts  setup.ts
lecturescribe-tauri/src/runtime/: dom-renderer.ts
lecturescribe-tauri/src/state/: app-state.ts
lecturescribe-tauri/src/styles/: components.css  dialogs.css  responsive.css
lecturescribe-tauri/src/types/: contracts.ts
lecturescribe-tauri/tests/: fixtures.ts  preview.test.ts  settings-fixtures.ts  settings.test.ts  ux-foundation.test.ts
scripts/: fetch-yt-dlp.ps1  package-portable.ps1  run.ps1  setup-check.ps1
