[package]
name = "lecturescribe"
version = "0.1.1"
description = "Small native video and audio transcription app"
authors = ["LectureScribe contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
keyring = { version = "3", features = ["windows-native"] }
