[package]
name = "lecturescribe"
version = "0.2.0"
description = "Small native video and audio transcription app"
authors = ["LectureScribe contributors"]
edition = "2021"

[workspace]
members = [
  "crates/lecturescribe-core",
  "crates/lecturescribe-engine",
  "crates/lecturescribe-adapters",
]
resolver = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lecturescribe-adapters = { path = "crates/lecturescribe-adapters" }
lecturescribe-core = { path = "crates/lecturescribe-core" }
lecturescribe-engine = { path = "crates/lecturescribe-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
