[package]
name = "lecturescribe-core"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
