[package]
name = "lecturescribe-engine"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lecturescribe-core = { path = "../lecturescribe-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
